# BallProject

./: Balls.sln  CMakeLists.txt  Generate.bat  README.md  StartVisualStudio.bat
Balls/: Balls.vcxproj  Balls.vcxproj.filters  CMakeLists.txt
Balls/source/: main.cpp
CMake/: FindGLEW.cmake  FindGLM.cmake  FindSDL2.cmake
GameCommon/: CMakeLists.txt  GameCommon.vcxproj  GameCommon.vcxproj.filters
GameCommon/include/: Export.h  Object.h
GameCommon/source/: Object.cpp
GameModel/: GameModel.vcxproj  GameModel.vcxproj.filters
GameModel/include/: Export.h  GameModel.h
GameModel/source/: GameModel.cpp
GameView/: CMakeLists.txt  GameView.vcxproj
GameView/include/: Camera.h  DefaultShader.h  Export.h  GLUtils.hpp  GameView.h  GameViewPrivate.h  GameWindow.h  GrassShader.h  MyApp.h  ShaderPrivate.h
GameView/resources/: myFrag.frag  myFrag.fs  myVert.vert  myVert.vs
GameView/shaders/: Grass.fs  Grass.vs
GameView/source/: Camera.cpp  DefaultShader.cpp  GameView.cpp  GameViewPrivate.cpp  GameWindow.cpp  GrassShader.cpp  MyApp.cpp  ShaderPrivate.cpp
Logger/: CMakeLists.txt  Logger.vcxproj  Logger.vcxproj.filters
Logger/include/: Export.h  GameLogger.h  GameLoggerPrivate.h
Logger/source/: GameLogger.cpp  GameLoggerPrivate.cpp
OpenglExperimentProject/: CMakeLists.txt
OpenglExperimentProject/source/: main.cpp
